public/css/index.css
.pointer {
    cursor: pointer;
}

@media(max-width: 650px) {
    .brand-logo {
        display: none !important;
    }
}

@media(max-width: 990px) {
    .nav-top {
        display: none !important;
    }
}

.alert {
    padding: 20px;
    background-color: #f44336;
    color: white;
    opacity: 1;
    transition: opacity 0.6s;
    margin-bottom: 15px;
}

.alert.success {
    background-color: #4CAF50;
}

.alert.info {
    background-color: #2196F3;
}

.alert.warning {
    background-color: #ff9800;
}

.closebtn {
    margin-left: 15px;
    color: white;
    font-weight: bold;
    float: right;
    font-size: 22px;
    line-height: 20px;
    cursor: pointer;
    transition: 0.3s;
}

.closebtn:hover {
    color: black;
}

#modal-message {
    width: 30% !important;
}

.dropdown-content.select-dropdown {
    height: 150px;
    background-color: #424242;
    color: #fff;
}

.main-loader {
    z-index: 3000;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: white;
    background-color: rgba(0, 0, 0, 0.2);
}

.spinner-black, .spinner-black-only {
    border-color: #000;
    border-top-color: rgb(0, 0, 0);
    border-right-color: rgb(0, 0, 0);
    border-bottom-color: rgb(0, 0, 0);
    border-left-color: rgb(0, 0, 0);
}

.sidenav li.active {
    background-color: #212121;
}

.inline {
    display: inline-block;
}

.radio {
    margin-right: 15px;
}

input {
    color: #fff !important;
}

label {
    color: #fff !important;
}

div>.input-field>#txt {
    color: #000 !important;
}

.pagination li>a {
    color: #fff !important;
}

table {
    width: 100%;
}

/* tr, th, td {
    border: 0.125em solid;
} */
@media (max-width: 40em) {
    thead tr {
        position: absolute;
        top: -9999em;
        left: -9999em;
    }

    tr {
        border: 0.125em solid;
        border-bottom: 0;
    }

    tr+tr {
        margin-top: 1.5em;
    }

    tr, td {
        display: block;
    }

    td {
        border: none;
        border-bottom: 0.125em solid;
        padding-left: 50%;
    }

    td:before {
        content: attr(data-label);
        display: inline-block;
        line-height: 1.5;
        margin-left: -100%;
        width: 100%;
        float: left;
        font-weight: bold;
    }
}

@media (max-width: 20em) {
    td {
        padding-left: 0.75em;
    }

    td:before {
        display: block;
        margin-bottom: 0.75em;
        margin-left: 0;
    }
}

:root {
    --timeline-color: #f876f5;
    --text-color: #ffffff;
    --background-color: #424242;
}

.timeline-unit {
    height: 5rem;
    width: 60rem;
    border-left: .2rem solid var(--timeline-color);
    position: relative;
    padding-left: 2rem;
    display: flex;
    align-items: center;
}

@media(max-width: 40em) {
    .timeline-unit {
        height: 10rem;
        width: 20rem;
    }
}

.timeline-unit:last-child {
    border-image: linear-gradient(to bottom,
            var(--timeline-color),
            transparent) 1 100%;
}

.timeline-unit:first-child {
    border-image: linear-gradient(to top,
            var(--timeline-color) 0% 50%,
            transparent 50%) 1 100%;
}

.timeline-unit:first-child>.timeline-flag {
    color: var(--background-color);
    text-align: center;
    font-weight: 900;
}

.timeline-flag {
    position: absolute;
    top: 50%;
    left: -1.1rem;
    transform: translate(0, -50%);
    width: 2rem;
    height: 2rem;
    border-radius: 50%;
    border: .2rem solid var(--timeline-color);
    z-index: 1;
}

.timeline-flag--empty {
    background-color: var(--background-color);
}

.timeline-flag--full {
    background-color: var(--timeline-color);
}

#map {
    width: 100%;
    height: 450px;
    background: grey;
    overflow-x: auto;
}

